<resources>
    <string name="app_name">Pulse+</string>
    <string name="skip"><![CDATA[SKIP >>]]></string>
    <string name="walk1">CLICK THE <b>PRESCRIPTION TO PLACE AN ORDER</b></string>
    <string name="walk2">CLICK THE <b>PRESCRIPTION TO PLACE AN ORDER</b></string>
    <string name="walk3">LOCK IN YOUR <b>SAVINGS FOR THE LIFETIME</b></string>
    <string name="walk4"><b>CONVENIENT &#38; QUICK</b> DELIVERY</string>
    <string name="getstart">LET\'S GET STARTED</string>

    <!--custom fonts name-->
    <string name="CoreSansA15Thin">CoreSansA15Thin.otf</string>
    <string name="CoreSansA35Light">CoreSansA35Light.otf</string>
    <string name="CoreSansA45Regular">CoreSansA45Regular.otf</string>
    <string name="CoreSansA55Medium">CoreSansA55Medium.otf</string>
    <string name="CoreSansA65Bold">CoreSansA65Bold.otf</string>
    <string name="CoreSansA75ExtraBold">CoreSansA75ExtraBold.otf</string>
    <string name="JLSDataGothicC_NC">JLSDataGothicC_NC.otf</string>
    <string name="MyriadPro_Regular">MyriadPro-Regular.otf</string>
    <string name="MyriadPro_Semibold">MyriadPro-Semibold.otf</string>
    <string name="verify_sms"><b>Please enter your phone number to log in:</b></string>
    <string name="verify_phone_content">This example is limited to 10 digit Indian Number</string>
    <string name="code">91</string>
    <string name="symbol">+</string>
    <string name="country">+91</string>
    <string name="otp_msg">Waiting to automatically detect an SMS send to %s</string>
    <string name="verify_now">Verify Now</string>
    <string name="resend">Resend</string>
    <string name="no_confirm">We will be verifying the phone number:</string>
    <string name="registered_already">You have registered this account in another device.</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="no_confirm1">Is this OK, or would you like to edit the number?</string>
    <string name="home">HOME</string>
    <string name="myaccount">MY ACCOUNT</string>
    <string name="my_account">My Account</string>
    <string name="order_history">Order History</string>
    <string name="promotion">Promotion</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="faq">Faq</string>
    <string name="aboutus_our_team">Our Team</string>
    <string name="aboutus_activity">Activity</string>
    <string name="aboutus_mission">Our Mission</string>
    <string name="contact_us">Contact Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="splash_screen"> <b>HEALTHCARE</b> RETAIL      ONE CLICK AWAY</string>
    <string name="about_version">Version 1.1.0</string>
    <string name="about_app_name">Pulse Plus Pvt Ltd</string>
    <string name="prescription">Prescription</string>
    <string name="order">Order</string>
    <string name="name">Name:</string>
    <string name="phone_number">Mobile Number:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="update">UPDATE</string>
    <string name="palce_new_order">PLACE NEW ORDER</string>
    <string name="palce_reorder">REORDER</string>
    <string name="type_msg"><i>Type your message....</i></string>
    <string name="your_mail_id">Your Email Address</string>
    <string name="submit_msg">  Submit your message  </string>
    <string name="your_message">Your Message</string>
    <string name="example_mail">example: office@example.com</string>
    <string name="chat_name">Anna Beck</string>
    <string name="welcome_chat">Hi Pulse Pharmacy welcomes You. Please Choose from the option below</string>
    <string name="choose">Choose</string>
    <string name="cancel">cancel</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="loading">Loading...</string>
    <string name="audio_recored">VOICE RECORD</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="delete">Delete</string>
    <string name="Dashboard">Dashboard</string>
    <string name="otp">015426</string>
    <string name="enter_the_6_digit_confirmation_code">Enter the 6-Digit confirmation code:</string>
    <string name="contact_desc">example: I\'d like to say \"good job!\"</string>
    <string name="record_again">RECORD AGAIN</string>
    <string name="send">SEND</string>


    <string name="text_test">fadsfasdfadsf</string>
    <string name="cart_title">Cart</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="save_to_cart">Save To Cart</string>
    <string name="morning">Morning 6AM - 10AM</string>
    <string name="evening">Evening 6PM - 10PM</string>
    <string name="choose_delivery_slot">Choose Delivery Slot</string>
    <string name="continue_order">Continue</string>
    <string name="save_order">Save Order</string>
    <string name="select">Select</string>

    <string name="next">NEXT</string>
    <string name="skip1">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="rss">\u20B9</string>
</resources>
