<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_dialog_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.armor.fontlib.CTextView
            android:id="@+id/txtMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/registered_already"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/eighteen_sp"
            app:fontName="@string/CoreSansA45Regular" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="horizontal">

        <com.armor.fontlib.CTextView
            android:id="@+id/txtConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/eighteen_sp"
            app:fontName="@string/CoreSansA75ExtraBold" />
    </RelativeLayout>
</LinearLayout>