<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/verify_page_title" />

    <com.armor.fontlib.CTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_6_digit_confirmation_code"
        android:layout_marginEnd="@dimen/ten_dp"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/eighteen_sp"
        android:textStyle="bold"
        app:fontName="@string/CoreSansA45Regular" />

    <com.armor.fontlib.CTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="It was sent in an SMS message to"
        android:layout_marginEnd="@dimen/ten_dp"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="7dp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/eighteen_sp"
        app:fontName="@string/CoreSansA45Regular" />
    <com.armor.fontlib.CTextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ten_dp"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="7dp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/eighteen_sp"
        app:fontName="@string/CoreSansA45Regular" />

        <com.armor.fontlib.CEditText
            android:id="@+id/otp"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:maxLength="6"
            android:inputType="number"
            android:paddingLeft="@dimen/ten_dp"
            android:paddingRight="@dimen/ten_dp"
            android:background="@drawable/grey_shape"
            android:textColorHint="@color/grey1"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            app:fontName="@string/CoreSansA45Regular"
            android:hint="@string/otp"
             />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/twenty_dp"
        android:orientation="vertical">

        <com.armor.fontlib.CButton
            android:id="@+id/btn_verify"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_edge_rectangle"
            android:text="@string/verify_now"
            android:textAllCaps="false"
            android:textSize="@dimen/twenty_sp"
            app:fontName="@string/CoreSansA45Regular" />

        <com.armor.fontlib.CButton
            android:id="@+id/btn_resend"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty_dp"
            android:background="@drawable/round_edge_rectangle"
            android:text="@string/resend"
            android:textAllCaps="false"
            android:textSize="@dimen/twenty_sp"
            app:fontName="@string/CoreSansA45Regular" />
    </LinearLayout>

</LinearLayout>