<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalkThroughActivity">

    <ImageView
        android:id="@+id/imgbg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/indicatorLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/five_dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/ten_dp"
                    android:layout_margin="@dimen/four_dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/circle_white" />

                <ImageView
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/ten_dp"
                    android:layout_margin="4dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/circle_white1" />

                <ImageView
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/ten_dp"
                    android:layout_margin="4dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/circle_white2" />

                <ImageView
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/ten_dp"
                    android:layout_margin="4dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/circle_white3" />
            </LinearLayout>

            <com.armor.fontlib.CTextView
                android:id="@+id/txt_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textSize="18sp"
                app:fontName="@string/CoreSansA45Regular" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
